[gd_scene load_steps=3 format=2]

[ext_resource path="res://Prefabs/Projectiles/Projectile.gd" type="Script" id=1]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37, 45 )

[node name="Projectile" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Class Testing
Not in the actual game"
}

[node name="PlayerBullet" type="Sprite" parent="."]

[node name="PlayerBulletArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBulletArea"]
scale = Vector2( 1, 1.01538 )
z_as_relative = false
shape = SubResource( 1 )
[connection signal="area_entered" from="PlayerBulletArea" to="." method="_on_PlayerBulletArea_area_entered"]
